5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1692_1880.log
== SUBMITION (2019-05-02 15:51:08) 
-- CODE:
x = int(input("numero"))

if x = 1:
	m = "janeiro"
elif x = 2:
	m = "fevereiro"
elif x = 3:
	m = "março"
elif x = 4:
	m = "abril"
elif x = 5:
	m = "maio"
elif x = 6:
	m = "junho"
elif x = 7:
	m = "julho"
elif x = 8:
	m = "agosto"
elif x = 9:
	m = "setembro"
elif x = 10:
	m = "outubro"
elif x = 11:
	m = "novembro"
elif x = 12:
	m = "dezembro"
else:
	m = "numero de mes invalido"
print(m)
-- EXECUTION TIME:
0.196327
-- ERROR:
  File "/home/codebench/codes/1692/1880/main.py", line 3
    if x = 1:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:51:29) 
-- CODE:
x = int(input("numero"))

if x = 1:
	m = "janeiro"
elif x = 2:
	m = "fevereiro"
elif x = 3:
	m = "março"
elif x = 4:
	m = "abril"
elif x = 5:
	m = "maio"
elif x = 6:
	m = "junho"
elif x = 7:
	m = "julho"
elif x = 8:
	m = "agosto"
elif x = 9:
	m = "setembro"
elif x = 10:
	m = "outubro"
elif x = 11:
	m = "novembro"
elif x = 12:
	m = "dezembro"
else:
	m = "numero de mes invalido"
print(m)
-- ERROR:
File "XXXX", line 3
    if x = 1:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:52:21) 
-- CODE:
x = int(input("numero"))

if x == 1:
	m = "janeiro"
elif x == 2:
	m = "fevereiro"
elif x == 3:
	m = "março"
elif x == 4:
	m = "abril"
elif x == 5:
	m = "maio"
elif x == 6:
	m = "junho"
elif x == 7:
	m = "julho"
elif x == 8:
	m = "agosto"
elif x == 9:
	m = "setembro"
elif x == 10:
	m = "outubro"
elif x == 11:
	m = "novembro"
elif x == 12:
	m = "dezembro"
else:
	m = "numero de mes invalido"
print(m)
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:55:23) 
-- CODE:
x = int(input("numero"))

if x == 1:
	m = "janeiro"
elif x == 2:
	m = "fevereiro"
elif x == 3:
	m = "março"
elif x == 4:
	m = "abril"
elif x == 5:
	m = "maio"
elif x == 6:
	m = "junho"
elif x == 7:
	m = "julho"
elif x == 8:
	m = "agosto"
elif x == 9:
	m = "setembro"
elif x == 10:
	m = "outubro"
elif x == 11:
	m = "novembro"
elif x == 12:
	m = "dezembro"
else:
	m = "numero de mes invalido"
print(m)
-- EXECUTION TIME:
0.140043
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
